@@ -1,3 +1,8 @@
+2003-04-29  Markus Germeier  <mager@tzi.de>
+
+	* libmpio/src/ecc.c (mpio_ecc_256_check): 
+	  fix level for debug messages
+
 2003-04-27 Markus Germeier  <mager@tzi.de>
 	* libmpio: fixed some C code "things" found with
 	  "paranoia" CFLAGS settings
